# outline-gen

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
outline_gen/: __init__.py  book_rewriter.py  cli.py  config.py  language_utils.py  llm_client.py  node_paths.py  pdf_processor.py  recursive_engine.py  site_builder.py  tag_template.py  usage_tracker.py  workspace.py
outline_gen/templates/: fiction.yaml  general.yaml  literature.yaml  philosophy.yaml  social_science.yaml
